# ICLAnalyticalDataProcessing

./: .gitignore  CMakeLists.txt  Discussion.md  Readme.md  benchmark.sh  build.sh  test.sh
Benchmarks/: Benchmarks.cpp
JoinOnlyEngine/: CMakeLists.txt
JoinOnlyEngine/Source/: Common.hpp  Competition.cpp  HashJoinOnly.cpp  HashJoinOnly.hpp  NestedLoopJoinOnly.cpp  SimplificationLayer.hpp  SortMergeJoinOnly.cpp
LoaderEngine/: CMakeLists.txt
LoaderEngine/Source/: BOSSRemoteBinaryLoaderEngine.cpp  BOSSRemoteBinaryLoaderEngine.hpp  Win32Boilerplate.cpp
Tests/: Tests.cpp
VolcanoEngine/: CMakeLists.txt
